--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.5.3
   flutter_secure_storage: ^9.2.4
+  mqtt_client: ^10.8.0
+  connectivity_plus: ^6.1.4
+  provider: ^6.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
