--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   mqtt_client: ^10.5.1
   connectivity_plus: ^6.1.4
   provider: ^6.1.4
+  mobile_scanner: ^6.0.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
