--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   connectivity_plus: ^6.1.4
   provider: ^6.1.4
   mobile_scanner: ^6.0.10
+  flutter_isolate: ^2.1.0
+  flutter_bloc: ^9.1.0
+  equatable: ^2.0.7
+  bloc: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
