Add fixes according to review

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ app.*.map.json
 /android/app/release
 # Ignore server_info.h file inside the esp8266 folder
 /esp8266/server_info.h
+/lib/constants/mqtt_constants.dart
